npr/filestash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filestash
  namespace: filestash
spec:
  selector:
    app: filestash
  ports:
  - port: 8334
