npr/filestash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filestash
  namespace: filestash
spec:
  ingressClassName: nginx
  rules:
    - host: filestash.zasda.id
      http:
        paths:
          - backend:
              service:
                name: filestash
                port:
                  number: 8334
            path: /
            pathType: Prefix
